--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tests.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOKAVYTjyBBwOGU8Qio7Wyd",
+      "authorship_tag": "ABX9TyOXkwvDGD1C85sRppV+3vK7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,170 +101,92 @@
       "metadata": {
         "id": "7-LySiGgDib-",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "outputId": "507b9151-aa81-4d62-fac0-292973f2a5a8"
+        "colab": {}
       },
       "source": [
         "#.from_records(rows) converts these rows into a pandas dataframe. \n",
         "import pandas as pd\n",
-        "pd.DataFrame.from_records(rows)"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "#create pandas dataframe\n",
+        "iris = pd.DataFrame.from_records(rows)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l3pzrmx7DsSp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "iris = iris[1:150]\n",
+        "iris.columns = ['SepalLength', 'SepalWidth', 'PetalLength', 'PetalWidth', 'Name']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jo6hI_j0EMk2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cols = ['SepalLength', 'SepalWidth', 'PetalLength', 'PetalWidth']\n",
+        "X = iris[cols]\n",
+        "y = iris.Name"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d213GQ7PGZlP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "23c78bd9-1924-48c3-bb1e-d8ecd1f24a24"
+      },
+      "source": [
+        "model = RandomForestClassifier()\n",
+        "model.fit(X_train, y_train)\n",
+        "y_predict = model.predict(X_test)\n",
+        "\n",
+        "accuracy_score(y_test.values, y_predict)"
+      ],
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "      <th>3</th>\n",
-              "      <th>4</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>SepalLength</td>\n",
-              "      <td>SepalWidth</td>\n",
-              "      <td>PetalLength</td>\n",
-              "      <td>PetalWidth</td>\n",
-              "      <td>Name</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>5.1</td>\n",
-              "      <td>3.5</td>\n",
-              "      <td>1.4</td>\n",
-              "      <td>0.2</td>\n",
-              "      <td>Iris-setosa</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>4.9</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1.4</td>\n",
-              "      <td>0.2</td>\n",
-              "      <td>Iris-setosa</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4.7</td>\n",
-              "      <td>3.2</td>\n",
-              "      <td>1.3</td>\n",
-              "      <td>0.2</td>\n",
-              "      <td>Iris-setosa</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>4.6</td>\n",
-              "      <td>3.1</td>\n",
-              "      <td>1.5</td>\n",
-              "      <td>0.2</td>\n",
-              "      <td>Iris-setosa</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>146</th>\n",
-              "      <td>6.7</td>\n",
-              "      <td>3</td>\n",
-              "      <td>5.2</td>\n",
-              "      <td>2.3</td>\n",
-              "      <td>Iris-virginica</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>147</th>\n",
-              "      <td>6.3</td>\n",
-              "      <td>2.5</td>\n",
-              "      <td>5</td>\n",
-              "      <td>1.9</td>\n",
-              "      <td>Iris-virginica</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>148</th>\n",
-              "      <td>6.5</td>\n",
-              "      <td>3</td>\n",
-              "      <td>5.2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>Iris-virginica</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>149</th>\n",
-              "      <td>6.2</td>\n",
-              "      <td>3.4</td>\n",
-              "      <td>5.4</td>\n",
-              "      <td>2.3</td>\n",
-              "      <td>Iris-virginica</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>150</th>\n",
-              "      <td>5.9</td>\n",
-              "      <td>3</td>\n",
-              "      <td>5.1</td>\n",
-              "      <td>1.8</td>\n",
-              "      <td>Iris-virginica</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>151 rows × 5 columns</p>\n",
-              "</div>"
-            ],
             "text/plain": [
-              "               0           1            2           3               4\n",
-              "0    SepalLength  SepalWidth  PetalLength  PetalWidth            Name\n",
-              "1            5.1         3.5          1.4         0.2     Iris-setosa\n",
-              "2            4.9           3          1.4         0.2     Iris-setosa\n",
-              "3            4.7         3.2          1.3         0.2     Iris-setosa\n",
-              "4            4.6         3.1          1.5         0.2     Iris-setosa\n",
-              "..           ...         ...          ...         ...             ...\n",
-              "146          6.7           3          5.2         2.3  Iris-virginica\n",
-              "147          6.3         2.5            5         1.9  Iris-virginica\n",
-              "148          6.5           3          5.2           2  Iris-virginica\n",
-              "149          6.2         3.4          5.4         2.3  Iris-virginica\n",
-              "150          5.9           3          5.1         1.8  Iris-virginica\n",
-              "\n",
-              "[151 rows x 5 columns]"
+              "0.9736842105263158"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 26
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l3pzrmx7DsSp",
+        "id": "MtDW1xbTGxEe",
         "colab_type": "code",
         "colab": {}
       },
